Bug 829482 - Do shrinking GCs more often for workers. r=khuey, r=gwagner, a=lsblakk