dom/workers/Workers.h
@@ -42,6 +42,12 @@ AssertIsOnMainThread()
 { }
 #endif
 
+struct MemoryParameter
+{
+  JSGCParamKey key;
+  uint32_t value;
+};
+
 // All of these are implemented in RuntimeService.cpp
 JSBool
 ResolveWorkerClasses(JSContext* aCx, JSHandleObject aObj, JSHandleId aId, unsigned aFlags,
